yaml/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  labels:
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.6.13
    release: istio
  name: ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        targetPort: 8080
        protocol: HTTP
