yaml/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    meta.helm.sh/release-name: prometheus-aggregator
    meta.helm.sh/release-namespace: prod-sre-app
  creationTimestamp: "2020-10-12T11:22:23Z"
  generation: 15
  labels:
    app: prometheus-helm
    app.kubernetes.io/managed-by: Helm
    chart: prometheus-helm-0.2.0
    component: server
    heritage: Helm
    release: prometheus-aggregator
  name: prometheus-aggregator
  namespace: prod-sre-app
  resourceVersion: "519338154"
  uid: 359cd753-9ee8-462b-b48b-9b1effec8650
spec:
  gateways:
  - istio-system/ingressgateway
  hosts:
  - prometheus-uwe-aggregator.infraprod.gcp.ecgmove.cloud
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prom-uwe-agg-istio.prod-sre-app.svc.cluster.local
        port:
          number: 9090
      headers:
        request:
          remove:
          - X-Transaction-ID
          - X-Transaction-SEQ
        response:
          add:
            Strict-Transport-Security: max-age=63072000
          remove:
          - X-Powered-By
